--- a/static/css/client_manager.css
+++ b/static/css/client_manager.css
@@ -46,7 +46,5 @@
     padding-top: 20px;
 }
 
-.detail-header {
-    /* ...existing code... */
-}
+/* .detail-header styles should be defined here if needed */
 /* ...existing code... */
